chore: fix typo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="skill-row">
         <img class="notebook-img" src="images/notebook.svg" alt="notebook-img">
         <h3>DevOps & SRE & Development</h3>
-        <p>I started my career as an Information Security Officer and moved to Systems Administration. After a long period of doing typical SysOps activities I disovered DevOps and fell in love with it. </p>
+        <p>I started my career as an Information Security Officer and moved to Systems Administration. After a long period of doing typical SysOps activities I discovered DevOps and fell in love with it. </p>
       </div>
     </div>
     <hr>
