chore: add github link

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/andreilapkin/">LinkedIn</a>
+    <a class="footer-link" href="https://github.com/drontmapik">GitHub</a>
     <a class="footer-link" href="https://twitter.com/andreilapkindev">Twitter</a>
     <p class="copyright">© 2020 Andrei Lapkin</p>
   </div>
