chore: add running section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         <h3>DevOps & SRE & Development</h3>
         <p>I started my career as an Information Security Officer and moved to Systems Administration. After a long period of doing typical SysOps activities I discovered DevOps and fell in love with it. </p>
       </div>
+      <div class="skill-row">
+        <img class="sneakers-img" src="images/sneakers.png" alt="sneakers-img">
+        <h3>Running</h3>
+        <p>I love running because it doesn’t require a ticket, a pitch, anyone or anything else. Day or night, in sunshine or rain on roads or through fields. Running is pure freedom.</p>
+      </div>
     </div>
     <hr>
     <div class="contact-me">
