chore: add books section and links

--- a/index.html
+++ b/index.html
@@ -26,12 +26,17 @@
       <div class="skill-row">
         <img class="notebook-img" src="images/notebook.svg" alt="notebook-img">
         <h3>DevOps & SRE & Development</h3>
-        <p>I started my career as an Information Security Officer and moved to Systems Administration. After a long period of doing typical SysOps activities I discovered DevOps and fell in love with it. </p>
+        <p>I started my career as an Information Security Officer and moved to Systems Administration. After a long period of doing typical SysOps activities I discovered DevOps and fell in love with it.</p>
       </div>
       <div class="skill-row">
         <img class="sneakers-img" src="images/sneakers.png" alt="sneakers-img">
         <h3>Running</h3>
         <p>I love running because it doesn’t require a ticket, a pitch, anyone or anything else. Day or night, in sunshine or rain on roads or through fields. Running is pure freedom.</p>
+      </div>
+      <div class="skill-row">
+        <img class="books-img" src="images/books.png" alt="books-img">
+        <h3>Book Writing</h3>
+        <p>I can create anything in my imagination and I can use it to express my loves, opinions, and beliefs.</p>
       </div>
     </div>
     <hr>
@@ -48,6 +53,8 @@
     <a class="footer-link" href="https://www.linkedin.com/in/andreilapkin/">LinkedIn</a>
     <a class="footer-link" href="https://github.com/drontmapik">GitHub</a>
     <a class="footer-link" href="https://twitter.com/andreilapkindev">Twitter</a>
+    <a class="footer-link" href="https://www.strava.com/athletes/60135792">Strava</a>
+    <a class="footer-link" href="https://www.litres.ru/endru-lapkin-17636241/">Books</a>
     <p class="copyright">© 2020 Andrei Lapkin</p>
   </div>
 </body>
