chore: add burger section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         <h3>Book Writing</h3>
         <p>I can create anything in my imagination and I can use it to express my loves, opinions, and beliefs.</p>
       </div>
+      <div class="skill-row">
+        <img class="burger-img" src="images/hamburger.png" alt="burger-img">
+        <h3>Burger Destroyer</h3>
+        <p>I wish that I was skinnier, but I love sandwiches.</p>
+      </div>
     </div>
     <hr>
     <div class="contact-me">
