chore: change laptop icon

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="skills">
       <h2>What I do.</h2>
       <div class="skill-row">
-        <img class="notebook-img" src="images/notebook.svg" alt="notebook-img">
+        <img class="notebook-img" src="images/laptop.png" alt="notebook-img">
         <h3>DevOps & SRE & Development</h3>
         <p>I started my career as an Information Security Officer and moved to Systems Administration. After a long period of doing typical SysOps activities I discovered DevOps and fell in love with it.</p>
       </div>
