feat: add responsiveness + simplify

--- a/index.html
+++ b/index.html
@@ -1,67 +1,61 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <title>Andrei Lapkin</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
-  <link rel="icon" href="favicon.ico">
-</head>
-
-<body>
-  <div class="middle-container">
-    <div class="profile">
-      <img src="images/andrei.png" alt="andrei-profile-img">
-      <h1>Andrei Lapkin</h1>
-      <h2>Hey.</h2>
-      <p class="intro">
-        I am a DevOps Engineer and Junior Web Developer who is keen on automating boring activities. 
-        I love creating simple solutions for complex problems. 
-      </p>
+<html lang="en">
+  <head>
+    <title>Andrei Lapkin</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="favicon.ico" />
+  </head>
+  <body>
+    <div class="container-fluid body-content">
+      <div class="row content">
+        <div class="center-block">
+          <div class="middle-container">
+            <img src="images/andrei.png" alt="andrei-profile-img" />
+            <h1>Andrei Lapkin</h1>
+            <h2>Hey.</h2>
+            <p class="intro">
+              I am a DevOps and SRE Engineer.
+            </p>
+          </div>
+          <hr />
+          <div>
+            <h2>What I do.</h2>
+            <div class="skill-row">
+              <h3>DevOps & SRE & Development</h3>
+              <p>I started my career as an Information Security Officer and moved to Systems Administration. After a long period of doing typical SysOps activities I discovered DevOps and fell in love with it.</p>
+            </div>
+            <div class="skill-row">
+              <h3>Book Writing</h3>
+              <p>I can create anything in my imagination and I can use it to express my loves, opinions, and beliefs.</p>
+            </div>
+            <div class="skill-row">
+              <h3>Running</h3>
+              <p>I love running because it doesn’t require a ticket, a pitch, anyone or anything else. Day or night, in sunshine or rain on roads or through fields. Running is pure freedom.</p>
+            </div>
+          </div>
+          <hr>
+        </div>
+      </div>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <a class="btn" href="mailto:andrew.lapkin.writer@gmail.com">Email</a>
+      </div>
     </div>
-    <hr>
-    <div class="skills">
-      <h2>What I do.</h2>
-      <div class="skill-row">
-        <img class="notebook-img" src="images/laptop.png" alt="notebook-img">
-        <h3>DevOps & SRE & Development</h3>
-        <p>I started my career as an Information Security Officer and moved to Systems Administration. After a long period of doing typical SysOps activities I discovered DevOps and fell in love with it.</p>
-      </div>
-      <div class="skill-row">
-        <img class="sneakers-img" src="images/sneakers.png" alt="sneakers-img">
-        <h3>Running</h3>
-        <p>I love running because it doesn’t require a ticket, a pitch, anyone or anything else. Day or night, in sunshine or rain on roads or through fields. Running is pure freedom.</p>
-      </div>
-      <div class="skill-row">
-        <img class="books-img" src="images/books.png" alt="books-img">
-        <h3>Book Writing</h3>
-        <p>I can create anything in my imagination and I can use it to express my loves, opinions, and beliefs.</p>
-      </div>
-      <div class="skill-row">
-        <img class="burger-img" src="images/hamburger.png" alt="burger-img">
-        <h3>Burger Destroyer</h3>
-        <p>I wish that I was skinnier, but I love sandwiches.</p>
-      </div>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/in/andreilapkin/">LinkedIn</a>
+      <a class="footer-link" href="https://github.com/drontmapik">GitHub</a>
+      <a class="footer-link" href="https://twitter.com/andreilapkindev">Twitter</a>
+      <a class="footer-link" href="https://www.strava.com/athletes/60135792">Strava</a>
+      <a class="footer-link" href="https://www.litres.ru/endru-lapkin-17636241/">Books</a>
+      <p class="copyright">© 2020 Andrei Lapkin</p>
     </div>
-    <hr>
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <a class="btn" href="mailto:andrew.lapkin.writer@gmail.com">Email me</a>
-      <a class="btn" href="https://t.me/andrei_lapkin">DM via Telegram</a>
-      
-    </div>
-  </div>
-
-
-  <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/andreilapkin/">LinkedIn</a>
-    <a class="footer-link" href="https://github.com/drontmapik">GitHub</a>
-    <a class="footer-link" href="https://twitter.com/andreilapkindev">Twitter</a>
-    <a class="footer-link" href="https://www.strava.com/athletes/60135792">Strava</a>
-    <a class="footer-link" href="https://www.litres.ru/endru-lapkin-17636241/">Books</a>
-    <p class="copyright">© 2020 Andrei Lapkin</p>
-  </div>
-</body>
-
+  </body>
 </html>
