--- a/index.html
+++ b/index.html
@@ -1,60 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <title>Andrei Lapkin</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="css/styles.css" />
+    <title>Andrei Lapkin</title>
     <link
       href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+
     <link rel="icon" href="favicon.ico" />
   </head>
+
   <body>
-    <div class="container-fluid body-content">
-      <div class="row content">
-        <div class="center-block">
-          <div class="middle-container">
+    <section id="title">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-12 middle-container">
             <img src="images/andrei.png" alt="andrei-profile-img" />
             <h1>Andrei Lapkin</h1>
-            <h2>Hey.</h2>
-            <p class="intro">
-              I am a DevOps and SRE Engineer.
-            </p>
+            <h3>Hey.</h3>
+            <p class="intro">I am a DevOps and SRE Engineer.</p>
           </div>
           <hr />
-          <div>
-            <h2>What I do.</h2>
-            <div class="skill-row">
-              <h3>DevOps & SRE & Development</h3>
-              <p>I started my career as an Information Security Officer and moved to Systems Administration. After a long period of doing typical SysOps activities I discovered DevOps and fell in love with it.</p>
-            </div>
-            <div class="skill-row">
-              <h3>Book Writing</h3>
-              <p>I can create anything in my imagination and I can use it to express my loves, opinions, and beliefs.</p>
-            </div>
-            <div class="skill-row">
-              <h3>Running</h3>
-              <p>I love running because it doesn’t require a ticket, a pitch, anyone or anything else. Day or night, in sunshine or rain on roads or through fields. Running is pure freedom.</p>
-            </div>
-          </div>
-          <hr>
         </div>
       </div>
-      <div class="contact-me">
-        <h2>Get In Touch</h2>
-        <a class="btn" href="mailto:andrew.lapkin.writer@gmail.com">Email</a>
+    </section>
+
+    <section id="features">
+      <div class="container-fluid">
+        <h2>What I do.</h2>
+        <div class="row">
+          <div class="feature-box col-lg-12">
+            <i class="icon fas fa-laptop fa-4x"></i>
+            <h3 class="feature-title">DevOps & SRE & Development</h3>
+            <div class="text-box">
+              <p>
+                I started my career as an Information Security Officer and moved
+                to Systems Administration. After a long period of doing typical
+                SysOps activities I discovered DevOps and fell in love with it.
+              </p>
+            </div>
+          </div>
+
+          <div class="feature-box col-lg-12">
+            <i class="icon fas fa-book fa-4x"></i>
+            <h3 class="feature-title">Book Writing</h3>
+            <div class="text-box">
+              <p>
+                I can create anything in my imagination and I can use it to
+                express my loves, opinions, and beliefs.
+              </p>
+            </div>
+          </div>
+
+          <div class="feature-box col-lg-12">
+            <i class="icon fas fa-heartbeat fa-4x"></i>
+            <h3 class="feature-title">Running</h3>
+            <div class="text-box">
+              <p>
+                I love running because it doesn’t require a ticket, a pitch,
+                anyone or anything else. Day or night, in sunshine or rain on
+                roads or through fields. Running is pure freedom.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="contact-me">
+          <h2>Get In Touch</h2>
+          <a class="btn" href="mailto:andrew.lapkin.writer@gmail.com">Email</a>
+        </div>
       </div>
-    </div>
+    </section>
+
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/andreilapkin/">LinkedIn</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/andreilapkin/"
+        >LinkedIn</a
+      >
       <a class="footer-link" href="https://github.com/drontmapik">GitHub</a>
-      <a class="footer-link" href="https://twitter.com/andreilapkindev">Twitter</a>
-      <a class="footer-link" href="https://www.strava.com/athletes/60135792">Strava</a>
-      <a class="footer-link" href="https://www.litres.ru/endru-lapkin-17636241/">Books</a>
+      <a class="footer-link" href="https://twitter.com/andreilapkindev"
+        >Twitter</a
+      >
+      <a class="footer-link" href="https://www.strava.com/athletes/60135792"
+        >Strava</a
+      >
+      <a class="footer-link" href="https://www.litres.ru/endru-lapkin-17636241/"
+        >Books</a
+      >
       <p class="copyright">© 2020 Andrei Lapkin</p>
     </div>
   </body>
