chore: add Credly link

--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
       <a class="footer-link" href="https://www.litres.ru/endru-lapkin-17636241/"
         >Books</a
       >
+      <a class="footer-link" href="https://www.youracclaim.com/users/andrei-lapkin"
+        >Credly Acclaim</a
+      >
       <p class="copyright">© 2020 Andrei Lapkin</p>
     </div>
   </body>
